[package]
name = "sg-prost"
version = "0.11.3"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Lucio Franco <luciofranco14@gmail.com",
  "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/TaurusM/prost.git"
documentation = "https://docs.rs/prost"
readme = "README.md"
description = "This is a fork."
keywords = ["protobuf", "serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.56"

[workspace]
members = [
  "conformance",
  "sg-prost-build",
  "sg-prost-derive",
  "sg-prost-types",
  "protobuf",
  "tests",
  "tests-2015",
  "tests-no-std",
  "tests/single-include",
]

exclude = [
  # The fuzz crate can't be compiled or tested without the 'cargo fuzz' command,
  # so exclude it from normal builds.
  "fuzz",
  # Same counts for the afl fuzz targets
  "afl",
]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["sg-prost-derive", "std"]
no-recursion-limit = []
std = []

[dependencies]
bytes = { version = "1", default-features = false }
prost-derive = { version = "0.11.0", path = "sg-prost-derive", optional = true }

[dev-dependencies]
criterion = "0.3"
env_logger = { version = "0.8", default-features = false }
log = "0.4"
proptest = "1"
rand = "0.8"

[profile.bench]
debug = true

[[bench]]
name = "varint"
harness = false
