[package]
name = "sg-prost-types"
version = "0.11.2"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/TaurusM/prost.git"
documentation = "https://docs.rs/prost-types"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[features]
default = ["std"]
std = ["sg-prost/std"]

[dependencies]
bytes = { version = "1", default-features = false }
sg-prost = { version = "0.11", path = "..", default-features = false, features = ["sg-prost-derive"] }
serde = { version = "1.0.145", features = ["derive"] }

[dev-dependencies]
proptest = "1"
