[package]
name = "tests-2015"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2015"

build = "../tests/src/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["edition-2015", "std"]
edition-2015 = []
std = []

[dependencies]
anyhow = "1.0.1"
bytes = "1"
cfg-if = "1"
sg-prost = { path = ".." }
sg-prost-types = { path = "../sg-prost-types" }
protobuf = { path = "../protobuf" }

[dev-dependencies]
diff = "0.1"
sg-prost-build = { path = "../sg-prost-build" }
tempfile = "3"

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.8", default-features = false }
sg-prost-build = { path = "../sg-prost-build" }
protobuf = { path = "../protobuf" }
